--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -60,6 +60,22 @@
 }
 
 
+
+@article{huang2024analyzing,
+  title    = {Analyzing entropy features in time-series data for pattern recognition in neurological conditions},
+  journal  = {Artificial Intelligence in Medicine},
+  pages    = {102821},
+  year     = {2024},
+  issn     = {0933-3657},
+  doi      = {https://doi.org/10.1016/j.artmed.2024.102821},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0933365724000630},
+  author   = {Yushan Huang and Yuchen Zhao and Alexander Capstick and Francesca Palermo and Hamed Haddadi and Payam Barnaghi},
+  keywords = {Entropy, Time-series data, Pattern recognition, Neurological conditions},
+  desc     = {This work presents a method for using entropy measures to identify patterns in time-series data for neurological conditions.},
+  code     = {https://github.com/yushan-huang/entropypipeline}
+}
+
+
 @article{capstick2023digital,
   title     = {Digital remote monitoring for screening and early detection of urinary tract infections},
   volume    = {7},
@@ -74,3 +90,4 @@
   month     = jan,
   desc      = {We use machine learning and symptom-led feature engineering to build a UTI risk model based on in-home activity and nocturnal physiology.}
 }
+
