--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -91,3 +91,15 @@
   desc      = {We use machine learning and symptom-led feature engineering to build a UTI risk model based on in-home activity and nocturnal physiology.}
 }
 
+
+
+
+
+@article{capstick2024representation,
+  title   = {Representation Learning of Daily Movement Data Using Text Encoders},
+  journal = {ICLR Workshop on Learning from Time Series For Health},
+  year    = {2024},
+  author  = {Alexander Capstick and Tianyu Cui and Yu Chen and Payam Barnaghi},
+  url     = {https://openreview.net/forum?id=mmxNNwxvWG},
+  code    = {https://github.com/alexcapstick/Text-Encoders-For-Daily-Movement-Data}
+}
