--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -7,15 +7,6 @@
   url     = {https://arxiv.org/abs/2110.09868}
 }
 
-@article{capstick2022loss,
-  title   = {Loss Adapted Plasticity in Deep Neural Networks to Learn from Data with Unreliable Sources},
-  author  = {Capstick, Alexander and Palermo, Francesca and Barnaghi, Payam},
-  journal = {arXiv preprint arXiv:2212.02895},
-  year    = {2022},
-  desc    = {We present a technique for learning models in situations in which data is being generated from multiple data sources, with different levels of data quality or reliability.},
-  url     = {https://arxiv.org/abs/2212.02895},
-  code    = {https://github.com/alexcapstick/LossAdaptedPlasticity}
-}
 
 @article{capstick2023clinically,
   title     = {Clinically relevant and explainable feature extraction from remote monitoring data for the prediction of urinary tract infections},
@@ -94,12 +85,22 @@
 
 
 
-
 @article{capstick2024representation,
   title   = {Representation Learning of Daily Movement Data Using Text Encoders},
   journal = {ICLR Workshop on Learning from Time Series For Health},
   year    = {2024},
   author  = {Alexander Capstick and Tianyu Cui and Yu Chen and Payam Barnaghi},
-  url     = {https://openreview.net/forum?id=mmxNNwxvWG},
+  url     = {https://arxiv.org/abs/2405.04494},
   code    = {https://github.com/alexcapstick/Text-Encoders-For-Daily-Movement-Data}
+}
+
+
+@article{capstick2022loss,
+  title   = {Training Neural Networks on Data Sources with Unknown Reliability},
+  author  = {Capstick, Alexander and Palermo, Francesca and Cui, Tianyu and Barnaghi, Payam},
+  journal = {arXiv preprint arXiv:2212.02895},
+  year    = {2024},
+  desc    = {We present a technique for learning models in settings where data is being generated from multiple data sources, with different levels of noise.},
+  url     = {https://arxiv.org/abs/2212.02895},
+  code    = {https://github.com/alexcapstick/unreliable-sources}
 }
