--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -2,7 +2,7 @@
   author  = {Palermo, Francesca and Li, Honglin and Capstick, Alexander and Fletcher-Lloyd, Nan and Zhao, Yuchen and Kouchaki, Samaneh and Nilforooshan, Ramin and Sharp, David and Barnaghi, Payam},
   title   = {Designing A Clinically Applicable Deep Recurrent Model to Identify Neuropsychiatric Symptoms in People Living with Dementia Using In-Home Monitoring Data},
   year    = {2021},
-  journal = {NeurIPS'21 Workshop-Bridging the Gap: From Machine Learning Research to Clinical Practice},
+  journal = {NeurIPS Workshop-Bridging the Gap: From Machine Learning Research to Clinical Practice},
   desc    = {This work presents a machine learning approach to predicting Neuropsychiatric Symptoms in People Living with Dementia using in-home activity data and recurrent neural networks.},
   url     = {https://arxiv.org/abs/2110.09868}
 }
@@ -11,7 +11,7 @@
 @article{capstick2023clinically,
   title     = {Clinically relevant and explainable feature extraction from remote monitoring data for the prediction of urinary tract infections},
   author    = {Capstick, Alexander and Palermo, Francesca and Li, Honglin and Barnaghi, Payam and Wingfield, David and Kolanko, Magdalena A and Sharp, David J},
-  journal   = {Alzheimer's & Dementia},
+  journal   = {Alzheimer's & Dementia, Wiley},
   volume    = {19},
   pages     = {e064683},
   year      = {2023},
@@ -27,7 +27,7 @@
   doi          = {10.1038/s41597-023-02519-y},
   abstractnote = {Dementia is a progressive condition that affects cognitive and functional abilities. There is a need for reliable and continuous health monitoring of People Living with Dementia (PLWD) to improve their quality of life and support their independent living. Healthcare services often focus on addressing and treating already established health conditions that affect PLWD. Managing these conditions continuously can inform better decision-making earlier for higher-quality care management for PLWD. The Technology Integrated Health Management (TIHM) project developed a new digital platform to routinely collect longitudinal, observational, and measurement data, within the home and apply machine learning and analytical models for the detection and prediction of adverse health events affecting the well-being of PLWD. This work describes the TIHM dataset collected during the second phase (i.e., feasibility study) of the TIHM project. The data was collected from homes of 56 PLWD and associated with events and clinical observations (daily activity, physiological monitoring, and labels for health-related conditions). The study recorded an average of 50 days of data per participant, totalling 2803 days.},
   number       = {11},
-  journal      = {Scientific Data},
+  journal      = {Scientific Data, Nature},
   publisher    = {Nature Publishing Group},
   author       = {Palermo, Francesca and Chen, Yu and Capstick, Alexander and Fletcher-Loyd, Nan and Walsh, Chloe and Kouchaki, Samaneh and True, Jessica and Balazikova, Olga and Soreq, Eyal and Scott, Gregory and Rostill, Helen and Nilforooshan, Ramin and Barnaghi, Payam},
   year         = {2023},
@@ -54,7 +54,7 @@
 
 @article{huang2024analyzing,
   title    = {Analyzing entropy features in time-series data for pattern recognition in neurological conditions},
-  journal  = {Artificial Intelligence in Medicine},
+  journal  = {Artificial Intelligence in Medicine, Elsevier},
   pages    = {102821},
   year     = {2024},
   issn     = {0933-3657},
@@ -74,7 +74,7 @@
   url       = {http://dx.doi.org/10.1038/s41746-023-00995-5},
   doi       = {10.1038/s41746-023-00995-5},
   number    = {1},
-  journal   = {npj Digital Medicine},
+  journal   = {npj Digital Medicine, Nature},
   publisher = {Springer Science and Business Media LLC},
   author    = {Capstick,  Alexander and Palermo,  Francesca and Zakka,  Kimberley and Fletcher-Lloyd,  Nan and Walsh,  Chloe and Cui,  Tianyu and Kouchaki,  Samaneh and Jackson,  Raphaella and Tran,  Martin and Crone,  Michael and Jensen,  Kirsten and Freemont,  Paul and Vaidyanathan,  Ravi and Kolanko,  Magdalena and True,  Jessica and Daniels,  Sarah and Wingfield,  David and Nilforooshan,  Ramin and Barnaghi,  Payam},
   year      = {2024},
@@ -103,4 +103,17 @@
   desc    = {We present a technique for learning models in settings where data is being generated from multiple data sources, with different levels of noise.},
   url     = {https://arxiv.org/abs/2212.02895},
   code    = {https://github.com/alexcapstick/unreliable-sources}
+}
+
+
+@article{rigny2024assessment,
+  title     = {Assessment of sleep patterns in dementia and general population cohorts using passive in-home monitoring technologies},
+  author    = {Rigny, Louise and Fletcher-Lloyd, Nan and Capstick, Alex and Nilforooshan, Ramin and Barnaghi, Payam},
+  journal   = {Nature Communications Medicine, Nature},
+  volume    = {4},
+  number    = {1},
+  pages     = {222},
+  year      = {2024},
+  publisher = {Nature Publishing Group UK London},
+  url       = {https://www.nature.com/articles/s43856-024-00646-0}
 }
