--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -83,13 +83,12 @@
 }
 
 
-
-
 @article{capstick2024representation,
   title   = {Representation Learning of Daily Movement Data Using Text Encoders},
   journal = {ICLR Workshop on Learning from Time Series For Health},
   year    = {2024},
   author  = {Alexander Capstick and Tianyu Cui and Yu Chen and Payam Barnaghi},
+  desc    = {We present the preliminary results of a method for encoding daily in-home movement data using language models. The goal is to use the knowledge language models have learnt about locations in the home to form more sensible embeddings of a participant's daily activity that we can use for clustering, similarity calculations, and studying changes in daily behaviour.},
   url     = {https://arxiv.org/abs/2405.04494},
   code    = {https://github.com/alexcapstick/Text-Encoders-For-Daily-Movement-Data}
 }
@@ -110,10 +109,22 @@
   title     = {Assessment of sleep patterns in dementia and general population cohorts using passive in-home monitoring technologies},
   author    = {Rigny, Louise and Fletcher-Lloyd, Nan and Capstick, Alex and Nilforooshan, Ramin and Barnaghi, Payam},
   journal   = {Nature Communications Medicine, Nature},
+  desc      = {From the plain language summary: We investigated whether a sleep sensor placed under a person's mattress could monitor sleep activity in people with dementia without disrupting their normal daily routines and behaviour. We compared sleep data collected from both people with dementia and the general population to identify whether differences could be detected.},
   volume    = {4},
   number    = {1},
   pages     = {222},
   year      = {2024},
   publisher = {Nature Publishing Group UK London},
   url       = {https://www.nature.com/articles/s43856-024-00646-0}
+}
+
+
+@article{capstick2024usinglargelanguagemodels,
+  title   = {Using Large Language Models for Expert Prior Elicitation in Predictive Modelling},
+  author  = {Capstick, Alexander and Krishnan, Rahul G. and Barnaghi, Payam},
+  journal = {arXiv preprint arXiv:2411.17284},
+  year    = {2024},
+  desc    = {In this work we present a method for using large language models to elicit expert priors for linear predictive models and demonstrate how human experts can aid the process. We then compare these posterior predictions with those made through in-context learning, where language models make predictions directly.},
+  url     = {https://arxiv.org/abs/2411.17284},
+  code    = {https://github.com/alexcapstick/llm-elicited-priors}
 }
