Update publications links

--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -126,5 +126,6 @@
   year    = {2024},
   desc    = {In this work we present a method for using large language models to elicit expert priors for linear predictive models and demonstrate how human experts can aid the process. We then compare these posterior predictions with those made through in-context learning, where language models make predictions directly.},
   url     = {https://arxiv.org/abs/2411.17284},
-  code    = {https://github.com/alexcapstick/llm-elicited-priors}
+  code    = {https://github.com/alexcapstick/llm-elicited-priors},
+  blog    = {https://alexcapstick.github.io/llm-elicited-priors.html}
 }
