--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -108,7 +108,7 @@
 @article{rigny2024assessment,
   title     = {Assessment of sleep patterns in dementia and general population cohorts using passive in-home monitoring technologies},
   author    = {Rigny, Louise and Fletcher-Lloyd, Nan and Capstick, Alex and Nilforooshan, Ramin and Barnaghi, Payam},
-  journal   = {Nature Communications Medicine, Nature},
+  journal   = {Communications Medicine, Nature},
   desc      = {From the plain language summary: We investigated whether a sleep sensor placed under a person's mattress could monitor sleep activity in people with dementia without disrupting their normal daily routines and behaviour. We compared sleep data collected from both people with dementia and the general population to identify whether differences could be detected.},
   volume    = {4},
   number    = {1},
@@ -128,4 +128,18 @@
   url     = {https://arxiv.org/abs/2411.17284},
   code    = {https://github.com/alexcapstick/llm-elicited-priors},
   blog    = {https://alexcapstick.github.io/llm-elicited-priors.html}
+}
+
+
+@article{walsh2025longitudinal,
+  title     = {Longitudinal study of care needs and behavioural changes in people living with dementia using in-home assessment data},
+  author    = {Walsh, Chloe and Capstick, Alexander and Fletcher-Lloyd, Nan and True, Jessica and CR & T Group and Nilforooshan, Ramin and Barnaghi, Payam},
+  journal   = {Communications Medicine, Nature},
+  volume    = {5},
+  number    = {1},
+  pages     = {14},
+  year      = {2025},
+  publisher = {Nature Publishing Group UK London},
+  url       = {https://doi.org/10.1038/s43856-024-00724-3},
+  desc      = {From the plain language summary: We study how living with dementia affects daily life and well-being after dementia diagnosis. Study participants and their carers answered questions about daily activities, mental health, and cognitive abilities every 3 months. We found that behavioural changes and challenges in daily tasks for people with dementia are affected as memory and thinking skills decline. Carers of people with mild symptoms of dementia reported higher levels of stress, while people with more severe symptoms relied more on community services with a lower number of hospital visits.}
 }
