--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -1,5 +1,5 @@
 @article{Palermo2021POSTERDesigningA,
-  author  = {Palermo, Francesca and Li, Honglin and Capstick, Alexander and Fletcher-Lloyd, Nan and Zhao, Yuchen and Kouchaki, Samaneh and Nilforooshan, Ramin and Sharp, David and Barnaghi, Payam},
+  author  = {Palermo, Francesca and Li, Honglin and Capstick</strong>, <strong>Alexander and Fletcher-Lloyd, Nan and Zhao, Yuchen and Kouchaki, Samaneh and Nilforooshan, Ramin and Sharp, David and Barnaghi, Payam},
   title   = {Designing A Clinically Applicable Deep Recurrent Model to Identify Neuropsychiatric Symptoms in People Living with Dementia Using In-Home Monitoring Data},
   year    = {2021},
   journal = {NeurIPS Workshop-Bridging the Gap: From Machine Learning Research to Clinical Practice},
@@ -10,7 +10,7 @@
 
 @article{capstick2023clinically,
   title     = {Clinically relevant and explainable feature extraction from remote monitoring data for the prediction of urinary tract infections},
-  author    = {Capstick, Alexander and Palermo, Francesca and Li, Honglin and Barnaghi, Payam and Wingfield, David and Kolanko, Magdalena A and Sharp, David J},
+  author    = {Capstick</strong>, <strong>Alexander and Palermo, Francesca and Li, Honglin and Barnaghi, Payam and Wingfield, David and Kolanko, Magdalena A and Sharp, David J},
   journal   = {Alzheimer's & Dementia, Wiley},
   volume    = {19},
   pages     = {e064683},
@@ -29,7 +29,7 @@
   number       = {11},
   journal      = {Scientific Data, Nature},
   publisher    = {Nature Publishing Group},
-  author       = {Palermo, Francesca and Chen, Yu and Capstick, Alexander and Fletcher-Loyd, Nan and Walsh, Chloe and Kouchaki, Samaneh and True, Jessica and Balazikova, Olga and Soreq, Eyal and Scott, Gregory and Rostill, Helen and Nilforooshan, Ramin and Barnaghi, Payam},
+  author       = {Palermo, Francesca and Chen, Yu and Capstick</strong>, <strong>Alexander and Fletcher-Loyd, Nan and Walsh, Chloe and Kouchaki, Samaneh and True, Jessica and Balazikova, Olga and Soreq, Eyal and Scott, Gregory and Rostill, Helen and Nilforooshan, Ramin and Barnaghi, Payam},
   year         = {2023},
   month        = sep,
   pages        = {606},
@@ -41,7 +41,7 @@
 
 
 @article{capstick2023predictingtrunc,
-  author  = {Capstick, Alexander and Barnaghi, Payam},
+  author  = {Capstick</strong>, <strong>Alexander and Barnaghi, Payam},
   title   = {Predicting Targets with Data from Non-Conforming Sources},
   journal = {Tiny Papers Track at ICLR},
   year    = {2023},
@@ -60,7 +60,7 @@
   issn     = {0933-3657},
   doi      = {https://doi.org/10.1016/j.artmed.2024.102821},
   url      = {https://www.sciencedirect.com/science/article/pii/S0933365724000630},
-  author   = {Yushan Huang and Yuchen Zhao and Alexander Capstick and Francesca Palermo and Hamed Haddadi and Payam Barnaghi},
+  author   = {Yushan Huang and Yuchen Zhao and <strong>Alexander Capstick</strong> and Francesca Palermo and Hamed Haddadi and Payam Barnaghi},
   keywords = {Entropy, Time-series data, Pattern recognition, Neurological conditions},
   desc     = {This work presents a method for using entropy measures to identify patterns in time-series data for neurological conditions.},
   code     = {https://github.com/yushan-huang/entropypipeline}
@@ -76,7 +76,7 @@
   number    = {1},
   journal   = {npj Digital Medicine, Nature},
   publisher = {Springer Science and Business Media LLC},
-  author    = {Capstick,  Alexander and Palermo,  Francesca and Zakka,  Kimberley and Fletcher-Lloyd,  Nan and Walsh,  Chloe and Cui,  Tianyu and Kouchaki,  Samaneh and Jackson,  Raphaella and Tran,  Martin and Crone,  Michael and Jensen,  Kirsten and Freemont,  Paul and Vaidyanathan,  Ravi and Kolanko,  Magdalena and True,  Jessica and Daniels,  Sarah and Wingfield,  David and Nilforooshan,  Ramin and Barnaghi,  Payam},
+  author    = {Capstick</strong>, <strong>Alexander and Palermo,  Francesca and Zakka,  Kimberley and Fletcher-Lloyd,  Nan and Walsh,  Chloe and Cui,  Tianyu and Kouchaki,  Samaneh and Jackson,  Raphaella and Tran,  Martin and Crone,  Michael and Jensen,  Kirsten and Freemont,  Paul and Vaidyanathan,  Ravi and Kolanko,  Magdalena and True,  Jessica and Daniels,  Sarah and Wingfield,  David and Nilforooshan,  Ramin and Barnaghi,  Payam},
   year      = {2024},
   month     = jan,
   desc      = {We use machine learning and symptom-led feature engineering to build a UTI risk model based on in-home activity and nocturnal physiology.}
@@ -87,7 +87,7 @@
   title   = {Representation Learning of Daily Movement Data Using Text Encoders},
   journal = {ICLR Workshop on Learning from Time Series For Health},
   year    = {2024},
-  author  = {Alexander Capstick and Tianyu Cui and Yu Chen and Payam Barnaghi},
+  author  = {<strong>Alexander Capstick</strong> and Tianyu Cui and Yu Chen and Payam Barnaghi},
   desc    = {We present the preliminary results of a method for encoding daily in-home movement data using language models. The goal is to use the knowledge language models have learnt about locations in the home to form more sensible embeddings of a participant's daily activity that we can use for clustering, similarity calculations, and studying changes in daily behaviour.},
   url     = {https://arxiv.org/abs/2405.04494},
   code    = {https://github.com/alexcapstick/Text-Encoders-For-Daily-Movement-Data}
@@ -96,7 +96,7 @@
 
 @article{capstick2022loss,
   title   = {Training Neural Networks on Data Sources with Unknown Reliability},
-  author  = {Capstick, Alexander and Palermo, Francesca and Cui, Tianyu and Barnaghi, Payam},
+  author  = {Capstick</strong>, <strong>Alexander and Palermo, Francesca and Cui, Tianyu and Barnaghi, Payam},
   journal = {arXiv preprint arXiv:2212.02895},
   year    = {2024},
   desc    = {We present a technique for learning models in settings where data is being generated from multiple data sources, with different levels of noise.},
@@ -107,7 +107,7 @@
 
 @article{rigny2024assessment,
   title     = {Assessment of sleep patterns in dementia and general population cohorts using passive in-home monitoring technologies},
-  author    = {Rigny, Louise and Fletcher-Lloyd, Nan and Capstick, Alex and Nilforooshan, Ramin and Barnaghi, Payam},
+  author    = {Rigny, Louise and Fletcher-Lloyd, Nan and Capstick</strong>, <strong>Alexander and Nilforooshan, Ramin and Barnaghi, Payam},
   journal   = {Communications Medicine, Nature},
   desc      = {From the plain language summary: We investigated whether a sleep sensor placed under a person's mattress could monitor sleep activity in people with dementia without disrupting their normal daily routines and behaviour. We compared sleep data collected from both people with dementia and the general population to identify whether differences could be detected.},
   volume    = {4},
@@ -121,7 +121,7 @@
 
 @article{capstick2024usinglargelanguagemodels,
   title   = {Using Large Language Models for Expert Prior Elicitation in Predictive Modelling},
-  author  = {Capstick, Alexander and Krishnan, Rahul G. and Barnaghi, Payam},
+  author  = {Capstick</strong>, <strong>Alexander and Krishnan, Rahul G. and Barnaghi, Payam},
   journal = {arXiv preprint arXiv:2411.17284},
   year    = {2024},
   desc    = {In this work we present a method for using large language models to elicit expert priors for linear predictive models and demonstrate how human experts can aid the process. We then compare these posterior predictions with those made through in-context learning, where language models make predictions directly.},
@@ -133,7 +133,7 @@
 
 @article{walsh2025longitudinal,
   title     = {Longitudinal study of care needs and behavioural changes in people living with dementia using in-home assessment data},
-  author    = {Walsh, Chloe and Capstick, Alexander and Fletcher-Lloyd, Nan and True, Jessica and CR & T Group and Nilforooshan, Ramin and Barnaghi, Payam},
+  author    = {Walsh, Chloe and Capstick</strong>, <strong>Alexander and Fletcher-Lloyd, Nan and True, Jessica and CR & T Group and Nilforooshan, Ramin and Barnaghi, Payam},
   journal   = {Communications Medicine, Nature},
   volume    = {5},
   number    = {1},
@@ -142,4 +142,16 @@
   publisher = {Nature Publishing Group UK London},
   url       = {https://doi.org/10.1038/s43856-024-00724-3},
   desc      = {From the plain language summary: We study how living with dementia affects daily life and well-being after dementia diagnosis. Study participants and their carers answered questions about daily activities, mental health, and cognitive abilities every 3 months. We found that behavioural changes and challenges in daily tasks for people with dementia are affected as memory and thinking skills decline. Carers of people with mild symptoms of dementia reported higher levels of stress, while people with more severe symptoms relied more on community services with a lower number of hospital visits.}
+}
+
+
+@article{bafaloukou2025interpretable,
+  title     = {An interpretable machine learning tool for in-home monitoring of agitation episodes in people living with dementia: a proof-of-concept study},
+  author    = {Bafaloukou, Marirena and Schalkamp, Ann-Kathrin and Fletcher-Lloyd, Nan and Capstick</strong>, <strong>Alexander and Walsh, Chloe and Sandor, Cynthia and Kouchaki, Samaneh and Nilforooshan, Ramin and Barnaghi, Payam and CR & T Group and others},
+  journal   = {eClinicalMedicine, The Lancet Discovery Science},
+  volume    = {80},
+  pages     = {103032},
+  year      = {2025},
+  publisher = {Elsevier},
+  url       = {https://doi.org/10.1016/j.eclinm.2024.103032}
 }
