--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -119,18 +119,6 @@
 }
 
 
-@article{capstick2024usinglargelanguagemodels,
-  title   = {Using Large Language Models for Expert Prior Elicitation in Predictive Modelling},
-  author  = {Capstick</strong>, <strong>Alexander and Krishnan, Rahul G. and Barnaghi, Payam},
-  journal = {arXiv preprint arXiv:2411.17284},
-  year    = {2024},
-  desc    = {In this work we present a method for using large language models to elicit expert priors for linear predictive models and demonstrate how human experts can aid the process. We then compare these posterior predictions with those made through in-context learning, where language models make predictions directly.},
-  url     = {https://arxiv.org/abs/2411.17284},
-  code    = {https://github.com/alexcapstick/llm-elicited-priors},
-  blog    = {https://alexcapstick.github.io/llm-elicited-priors.html}
-}
-
-
 @article{walsh2025longitudinal,
   title     = {Longitudinal study of care needs and behavioural changes in people living with dementia using in-home assessment data},
   author    = {Walsh, Chloe and Capstick</strong>, <strong>Alexander and Fletcher-Lloyd, Nan and True, Jessica and CR & T Group and Nilforooshan, Ramin and Barnaghi, Payam},
@@ -156,4 +144,17 @@
   url       = {https://doi.org/10.1016/j.eclinm.2024.103032},
   desc      = {We developed an ML model for the weekly monitoring of agitation episodes in people living with dementia using remotely and passively collected data. We identified actionable factors associated with agitation episodes, including sleep patterns, ambient light, and temperature. To facilitate the design of personalised non-pharmacological interventions, we created an interactive interface that allows users to simulate changes in environmental factors and observe their impact on the model's agitation probability estimates.},
   interface = {https://huggingface.co/spaces/marirena/AgitationMonitoring}
+}
+
+
+@article{capstick2024usinglargelanguagemodels,
+  title          = {AutoElicit: Using Large Language Models for Expert Prior Elicitation in Predictive Modelling},
+  author         = {Capstick</strong>, <strong>Alexander and Krishnan, Rahul G. and Barnaghi, Payam},
+  journal        = {arXiv preprint arXiv:2411.17284},
+  year           = {2025},
+  desc           = {In this work we present a method for using large language models to elicit expert priors for linear predictive models and demonstrate how human experts can aid the process. We then compare these posterior predictions with those made through in-context learning, where language models make predictions directly.},
+  url            = {https://arxiv.org/abs/2411.17284},
+  code           = {https://github.com/alexcapstick/llm-elicited-priors},
+  python_package = {https://github.com/alexcapstick/autoelicit},
+  blog           = {https://alexcapstick.github.io/llm-elicited-priors.html}
 }
