--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -158,3 +158,12 @@
   python_package = {https://github.com/alexcapstick/autoelicit},
   blog           = {https://alexcapstick.github.io/llm-elicited-priors.html}
 }
+
+@article{lima2025evaluatingspokenlanguagebiomarker,
+  title   = {Evaluating Spoken Language as a Biomarker for Automated Screening of Cognitive Impairment},
+  author  = {Lima, Maria R. and Capstick</strong>, <strong>Alexander and Geranmayeh, Fatemeh and Nilforooshan, Ramin and Matarić, Maja and Vaidyanathan, Ravi and Barnaghi, Payam},
+  year    = {2025},
+  journal = {arXiv preprint arXiv:2501.18731},
+  url     = {https://arxiv.org/abs/2501.18731},
+  desc    = {This work explores a method for using spoken language as a biomarker for cognitive impairment. By asking participants to describe a picture, we can use the language they use to predict their cognitive status.}
+}
