Update bio and publications

--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -99,7 +99,7 @@
   author  = {Capstick</strong>, <strong>Alexander and Palermo, Francesca and Cui, Tianyu and Barnaghi, Payam},
   journal = {arXiv preprint arXiv:2212.02895},
   year    = {2024},
-  desc    = {We present a technique for learning models in settings where data is being generated from multiple data sources, with different levels of noise.},
+  desc    = {We present a technique for training models in settings where data is being generated from multiple data sources, with different levels of noise.},
   url     = {https://arxiv.org/abs/2212.02895},
   code    = {https://github.com/alexcapstick/unreliable-sources}
 }
