--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -95,13 +95,14 @@
 
 
 @article{capstick2022loss,
-  title   = {Training Neural Networks on Data Sources with Unknown Reliability},
-  author  = {Capstick</strong>, <strong>Alexander and Palermo, Francesca and Cui, Tianyu and Barnaghi, Payam},
-  journal = {arXiv preprint arXiv:2212.02895},
-  year    = {2024},
-  desc    = {We present a technique for training models in settings where data is being generated from multiple data sources, with different levels of noise.},
-  url     = {https://arxiv.org/abs/2212.02895},
-  code    = {https://github.com/alexcapstick/unreliable-sources}
+  title          = {Training Neural Networks on Data Sources with Unknown Reliability},
+  author         = {Capstick</strong>, <strong>Alexander and Palermo, Francesca and Cui, Tianyu and Barnaghi, Payam},
+  journal        = {arXiv preprint arXiv:2212.02895},
+  year           = {2024},
+  desc           = {We present a technique for training models in settings where data is being generated from multiple data sources, with different levels of noise.},
+  url            = {https://arxiv.org/abs/2212.02895},
+  code           = {https://github.com/alexcapstick/unreliable-sources},
+  python_package = {https://github.com/alexcapstick/loss_adapted_plasticity}
 }
 
 
