--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -93,19 +93,6 @@
   code    = {https://github.com/alexcapstick/Text-Encoders-For-Daily-Movement-Data}
 }
 
-
-@article{capstick2022loss,
-  title          = {Training Neural Networks on Data Sources with Unknown Reliability},
-  author         = {Capstick</strong>, <strong>Alexander and Palermo, Francesca and Cui, Tianyu and Barnaghi, Payam},
-  journal        = {arXiv preprint arXiv:2212.02895},
-  year           = {2024},
-  desc           = {We present a technique for training models in settings where data is being generated from multiple data sources, with different levels of noise.},
-  url            = {https://arxiv.org/abs/2212.02895},
-  code           = {https://github.com/alexcapstick/unreliable-sources},
-  python_package = {https://github.com/alexcapstick/loss_adapted_plasticity}
-}
-
-
 @article{rigny2024assessment,
   title     = {Assessment of sleep patterns in dementia and general population cohorts using passive in-home monitoring technologies},
   author    = {Rigny, Louise and Fletcher-Lloyd, Nan and Capstick</strong>, <strong>Alexander and Nilforooshan, Ramin and Barnaghi, Payam},
@@ -148,10 +135,22 @@
 }
 
 
+@article{capstick2022loss,
+  title          = {Training Neural Networks on Data Sources with Unknown Reliability},
+  author         = {Capstick</strong>, <strong>Alexander and Palermo, Francesca and Cui, Tianyu and Barnaghi, Payam},
+  journal        = {Accepted to be published in Information Fusion},
+  year           = {2025},
+  desc           = {We present a technique for training models in settings where data is being generated from multiple data sources, with different levels of noise.},
+  url            = {https://arxiv.org/abs/2212.02895},
+  code           = {https://github.com/alexcapstick/unreliable-sources},
+  python_package = {https://github.com/alexcapstick/loss_adapted_plasticity}
+}
+
+
 @article{capstick2024usinglargelanguagemodels,
   title          = {AutoElicit: Using Large Language Models for Expert Prior Elicitation in Predictive Modelling},
   author         = {Capstick</strong>, <strong>Alexander and Krishnan, Rahul G. and Barnaghi, Payam},
-  journal        = {arXiv preprint arXiv:2411.17284},
+  journal        = {Under review, arXiv preprint arXiv:2411.17284},
   year           = {2025},
   desc           = {In this work we present a method for using large language models to elicit expert priors for linear predictive models and demonstrate how human experts can aid the process. We then compare these posterior predictions with those made through in-context learning, where language models make predictions directly.},
   url            = {https://arxiv.org/abs/2411.17284},
@@ -164,7 +163,7 @@
   title   = {Evaluating Spoken Language as a Biomarker for Automated Screening of Cognitive Impairment},
   author  = {Lima, Maria R. and Capstick</strong>, <strong>Alexander and Geranmayeh, Fatemeh and Nilforooshan, Ramin and Matarić, Maja and Vaidyanathan, Ravi and Barnaghi, Payam},
   year    = {2025},
-  journal = {arXiv preprint arXiv:2501.18731},
+  journal = {Under review, arXiv preprint arXiv:2501.18731},
   url     = {https://arxiv.org/abs/2501.18731},
   desc    = {This work explores a method for using spoken language as a biomarker for cognitive impairment. By asking participants to describe a picture, we can use the language they use to predict their cognitive status.}
 }
