--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -150,7 +150,7 @@
 @article{capstick2024usinglargelanguagemodels,
   title          = {AutoElicit: Using Large Language Models for Expert Prior Elicitation in Predictive Modelling},
   author         = {Capstick</strong>, <strong>Alexander and Krishnan, Rahul G. and Barnaghi, Payam},
-  journal        = {Under review, arXiv preprint arXiv:2411.17284},
+  journal        = {Accepted to be presented at ICML},
   year           = {2025},
   desc           = {In this work we present a method for using large language models to elicit expert priors for linear predictive models and demonstrate how human experts can aid the process. We then compare these posterior predictions with those made through in-context learning, where language models make predictions directly.},
   url            = {https://arxiv.org/abs/2411.17284},
