--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -148,10 +148,13 @@
 @article{capstick2022loss,
   title          = {Training Neural Networks on Data Sources with Unknown Reliability},
   author         = {Capstick</strong>, <strong>Alexander and Palermo, Francesca and Cui, Tianyu and Barnaghi, Payam},
-  journal        = {Accepted to be published in Information Fusion},
+  journal        = {Information Fusion},
+  volume         = {123},
+  pages          = {103239},
   year           = {2025},
+  issn           = {1566-2535},
   desc           = {We present a technique for training models in settings where data is being generated from multiple data sources, with different levels of noise.},
-  url            = {https://arxiv.org/abs/2212.02895},
+  url            = {https://doi.org/10.1016/j.inffus.2025.103239},
   code           = {https://github.com/alexcapstick/unreliable-sources},
   python_package = {https://github.com/alexcapstick/loss_adapted_plasticity}
 }
